<resources>
    <string name="app_name">FormTESTE</string>
    <string name="nome">Nome:</string>
    <string name="sobrenome">Sobrenome:</string>
    <string name="endereco">Endereço:</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="curso">Curso Desejado:</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="finalizar">Finalizar</string>
    <string name="formteste">FormTeste</string>
    <string name="txt_selecionar">Selecione um curso...</string>
</resources>